# mutual-fund-analyser

./: .gitignore  Makefile  README.md  nav_patch.py  pyproject.toml  unit-test-results.xml
.github/: README.md
.github/actions/setup-python/: action.yml
.github/actions/upload-test-results/: action.yml
.github/scripts/: README.md  check.sh  quick-check.sh  test-all.sh  test-integration.sh  test-unit.sh
.github/workflows/: ci-simplified.yml  ci.yml  main-checks.yml  quick-check.yml
config/: config.yaml
dashboard/: PLUGIN_GUIDE.md  server.py  test_output.html
dashboard/static/: index.html  test.html
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  SETUP.md  TROUBLESHOOTING.md  UPCOMING_FEATURES.md  USAGE.md  setup.md
docs/analysis/: holdings.md  portfolio.md
examples/: api.json
scripts/: verify-build.py
src/mfa/analysis/: analyzer.py  factories.py  interfaces.py
src/mfa/analysis/analyzers/: __init__.py  holdings_analyzer.py
src/mfa/analysis/scraping/: __init__.py  api_coordinator.py  base_coordinator.py  category_coordinator.py  targeted_coordinator.py
src/mfa/cli/: analyze.py  orchestrate.py  pipeline.py  scrape.py
src/mfa/config/: models.py  settings.py
src/mfa/core/: __init__.py  exceptions.py  schemas.py
src/mfa/logging/: logger.py
src/mfa/models/: schemas.py
src/mfa/orchestration/: analysis_orchestrator.py  orchestrator.py
src/mfa/scraping/: scraper_factory.py  zerodha_api.py  zerodha_coin.py
src/mfa/storage/: json_store.py  path_generator.py
src/mfa/utils/: __init__.py  company_normalizer.py  paths.py
src/mfa/web/: server.py
tests/helpers/: __init__.py  schema_validator.py
tests/integration/: __init__.py  test_config.yaml  test_holdings_analysis.py  test_portfolio_analysis.py  test_scrape_and_analyze.py
tests/integration/fixtures/: pipeline.py  workspace.py
tests/integration/validators/: __init__.py  holdings.py  portfolio.py
tests/schemas/holdings/: analysis_output.json  extracted_data.json
tests/schemas/portfolio/: analysis_output.json  extracted_data.json
tests/unit/: conftest.py  test_cli.py  test_config.yaml  test_config_system.py  test_exceptions.py
tests/unit/analysis/: __init__.py  test_analyzer.py  test_data_models.py  test_factories.py  test_holdings_analyzer.py  test_holdings_components.py
tests/unit/cli/: __init__.py  test_cli.py
tests/unit/core/: __init__.py  test_config_system.py  test_exceptions.py  test_interfaces.py
tests/unit/orchestration/: test_orchestrator.py
tests/unit/storage/: test_json_store.py
(+21 files in other folders)
